
add_executable(1-1 ch1/1-1.cpp)
add_executable(1-2 ch1/1-2.cpp)
add_executable(1-3 ch1/1-3.cpp)
add_executable(1-4 ch1/1-4.cpp)
add_executable(e1-1 ch1/e1-1.cpp)
add_executable(e1-2 ch1/e1-2.cpp)
add_executable(e1-3 ch1/e1-3.cpp)
add_executable(e1-4 ch1/e1-4.cpp)
add_executable(e1-7 ch1/e1-7.cpp)
add_executable(2-2 ch2/2-2.cpp)