

add_executable(helloServ ch1/helloServ.cpp)
add_executable(helloClient ch1/helloClient.cpp)
add_executable(lowOpen ch1/lowOpen.cpp)
add_executable(lowRead ch1/lowRead.cpp)
add_executable(fdSeri ch1/fdSeri.cpp)
add_executable(endianConv ch2/endianConv.cpp)
add_executable(inetAddr ch2/inet_addr.cpp)
add_executable(inet_aton ch2/inet_aton.cpp)
add_executable(inet_ntoa ch2/inet_ntoa.cpp)
add_executable(ch4echoServer ch4/echoServer.cpp)
add_executable(ch4echoClnt ch4/echoClnt.cpp)