

add_executable(helloServ ch1/helloServ.cpp)
add_executable(helloClient ch1/helloClient.cpp)
add_executable(lowOpen ch1/lowOpen.cpp)
add_executable(lowRead ch1/lowRead.cpp)
add_executable(fdSeri ch1/fdSeri.cpp)
add_executable(endianConv ch2/endianConv.cpp)
add_executable(inetAddr ch2/inet_addr.cpp)
add_executable(inet_aton ch2/inet_aton.cpp)
add_executable(inet_ntoa ch2/inet_ntoa.cpp)
add_executable(ch4echoServer ch4/echoServer.cpp)
add_executable(ch4echoClnt ch4/echoClnt.cpp)
add_executable(ch5echoClient ch5/echoClient2.cpp)
add_executable(ch5opServer ch5/opServer.cpp)
add_executable(ch5opClient ch5/opClient.cpp)
add_executable(ch6EchoSer ch6/ch6EchoSer.cpp)
add_executable(ch6EchoCli ch6/ch6EchoCli.cpp)
add_executable(ch6BoundHost1 ch6/ch6BoundHost1.cpp)
add_executable(ch6BoundHost2 ch6/ch6BoundHost2.cpp)
add_executable(ch6UEchoConClient ch6/ch6UEchoConClient.cpp)
add_executable(ch7fileServer ch7/ch7fileServer.cpp)
add_executable(ch7fileClient ch7/ch7fileClient.cpp)
add_executable(gethostbyname ch8/gethostbyname.cpp)
add_executable(ch9sockType ch9/ch9sockType.cpp)
add_executable(ch9getBuf ch9/ch9getBuf.cpp)
add_executable(ch9setbuf ch9/ch9setbuf.cpp)
add_executable(ch9ReuseadrEserver ch9/ch9ReuseadrEserver.cpp)
add_executable(fork ch10/fork.cpp)
add_executable(zombie ch10/zombie.cpp)
add_executable(wait ch10/wait.cpp)
add_executable(echo_mpserver ch10/echo_mpserver.c)
add_executable(echo_mpclient ch10/echo_mpclient.c)
add_executable(pipe1 ch11/pipe1.cpp)
add_executable(pipe2 ch11/pipe2.cpp)
add_executable(pipe3 ch11/pipe3.cpp)